--- a/b.env
+++ b/b.env
@@ -1,5 +1,3 @@
 # Node.js Backend Configuration
-PORT=5000                # Port for the Node.js backend to run on
+PORT=5000               
 
-# API Key for Gemini AI (used in the Python backend)
-GEMINI_API_KEY=AIzaSyA4Oqd0RimAAUb0gQ1Xr1uwvuT9KiRKwwc
